<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.riciclapp.MainActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnGioco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_gioco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGuida"
                tools:text="Test conoscenze" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnStatistiche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_statistiche"
                app:layout_constraintEnd_toEndOf="@+id/btnGuida"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@+id/btnGuida"
                app:layout_constraintTop_toBottomOf="@+id/btnGioco"
                tools:text="Statistiche sui rifiuti" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnGuida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_guida"
                app:layout_constraintEnd_toEndOf="@+id/btnSelProvincia"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@+id/btnSelProvincia"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="guida al riciclaggio" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSelProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_sel_provincia"
                app:layout_constraintEnd_toEndOf="@+id/btnPreferiti"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btnPreferiti"
                app:layout_constraintTop_toBottomOf="@+id/btnStatistiche"
                tools:text="Lista Ecocentri" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnPreferiti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/btn_preferiti"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSelProvincia"
                tools:text="Ecocentri Preferiti" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>
